<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_today">

    <fragment
        android:id="@+id/navigation_today"
        android:name="com.e.lunarphases.ui.today.TodayFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_today" />

    <fragment
        android:id="@+id/navigation_years"
        android:name="com.e.lunarphases.ui.years.YearsFragment"
        android:label="@string/title_years"
        tools:layout="@layout/fragment_years" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.e.lunarphases.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
